--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 PORT=
-CLIENT_ORIGINS=
 MYREKAP_URL=
 MYFLOWER_URL=
 DATABASE_URL=
-SHADOW_DATABASE_URL=
-JWT_SECRET=
+JWT_ACCESS=
+JWT_RESET_PASSWORD=
 SUPERADMIN_FULL_NAME=
 SUPERADMIN_USERNAME=
 SUPERADMIN_EMAIL=
@@ -15,8 +14,9 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 MIDTRANS_CLIENT_KEY=
 MIDTRANS_SERVER_KEY=
-WHATSAPP_NUMBER=62xxxxxxxx
-CALLMEBOT_API_KEY=
 BREVO_API_KEY=
-MAIL_FROM_NAME=
-MAIL_FROM_EMAIL=
+BREVO_SENDER_NAME=
+BREVO_SENDER_EMAIL=
+BREVO_TEMPLATE_OTP_ID=
+BREVO_TEMPLATE_ORDER_OWNER_ID=
+MANAGER_EMAIL=
