docs: add brevo, erd , api documentations

--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,6 @@ BREVO_SENDER_NAME=
 BREVO_SENDER_EMAIL=
 BREVO_TEMPLATE_OTP_ID=
 BREVO_TEMPLATE_ORDER_OWNER_ID=
+BREVO_TEMPLATE_MYREKAP_ORDER_STATUS_ID=
+BREVO_TEMPLATE_MYFLOWER_ORDER_STATUS_ID=
 MANAGER_EMAIL=
